--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
             "src/migrations"
         ],
         "psr-4": {
-            "Scollins\\SteamAuth\\": "src/Scollins/SteamAuth"
+            "SCollins\\SteamAuth\\": "src/SCollins/SteamAuth"
         }
     },
     "minimum-stability": "dev"
